# dbd2netcdf

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  CLAUDE.md  CMakeLists.txt  ChangeLog  Data.C  Data.H  DataColumn.C  DataColumn.H  Header.C  Header.H  INSTALL  INSTALL.md  INSTALL.sh  KnownBytes.C  KnownBytes.H  Makefile.am  Makefile.in  MyException.H  README  README.cygwin.txt  README.md  Readme.cygwin.txt  Readme.md  Readme.txt  ReadmeMacOS.md  Sensor.C  Sensor.H  Sensors.C  Sensors.H  SensorsMap.C  SensorsMap.H  StackDump.C  Version.H  config.h.in  configure  configure.ac  dbd2csv.C  (+13 more)
.github/workflows/: build-test.yml  dependency-check.yml  fuzz.yml  release.yml
doc/: ARCHITECTURE.md  CMakeLists.txt  dbd2csv.1  dbd2netCDF.1  dbdSensors.1  decompressTWR.1  pd02netCDF.1
osx.files/: startup.sh
pixmaps/: dbd2netcdf.hqx  dbd2netcdf.icns
src/: CMakeLists.txt  Data.C  Data.H  DataColumn.C  Decompress.C  Decompress.H  FileInfo.C  FileInfo.H  Header.C  Header.H  KnownBytes.C  KnownBytes.H  Logger.H  MyException.H  MyNetCDF.C  MyNetCDF.H  NetCDF.C  NetCDF.H  PD0.C  PD0.H  SGMerge.C  SGMerge.H  SeaGlider.C  SeaGlider.H  Sensor.C  Sensor.H  Sensors.C  Sensors.H  SensorsMap.C  SensorsMap.H  StackDump.C  StackDump.H  Tokenize.C  Tokenize.H  Variables.C  Variables.H  config.h.in  dbd2csv.C  dbd2netCDF.C  dbdSensors.C  (+6 more)
test/: CMakeLists.txt  dbd2csv  dbd2netCDF  dbdSensors  decompressTWR  pd02netCDF  test.both.csv  test.both.netCDF  test.both.sensors  test.pd0  test.pd0.netCDF  test.sbd  test.sbd.csv  test.sbd.netCDF  test.sbd.sensors  test.tbd  test.tbd.csv  test.tbd.netCDF
test/benchmark/: CMakeLists.txt  README.md  benchmark_main.cpp
test/data/: 00300000.combined.ncdump  00300000.dcd  00300000.dcd.csv  00300000.dcd.ncdump  00300000.dcd.sensors  00300000.ecd  00300000.scd  00300000.tcd
test/fuzz/: CMakeLists.txt  README.md  fuzz_data.cpp  fuzz_decompress.cpp  fuzz_header.cpp  fuzz_knownbytes.cpp  fuzz_sensor.cpp
test/fuzz/corpus/data/: sensor_plus_kb
test/fuzz/corpus/decompress/: plain_text
test/fuzz/corpus/header/: mission_name  whitespace
test/fuzz/corpus/knownbytes/: minimal_16byte
test/fuzz/corpus/sensor/: unavailable  valid_1byte  valid_4byte  valid_8byte
test/unit/: CMakeLists.txt  test_data.cpp  test_header.cpp  test_knownbytes.cpp  test_main.cpp  test_netcdf.cpp  test_sensor.cpp  test_sensors.cpp  test_sensorsmap.cpp
